newclay/test/Compiler/Propagation/Fail/BindingMismatchedReferenceKinds5/main.clay
define valueReturn;
overload valueReturn() --> x:Int __c__ """abort();""";

define refReturn;
overload refReturn() --> ref x:Int __c__ """abort();""";

define rvalueReturn;
overload rvalueReturn() --> rvalue x:Int __c__ """abort();""";

define constReturn;
overload constReturn() --> const x:Int __c__ """abort();""";

define main;
overload main() {
    rvalue y = constReturn();
}
